--- a/CRM/package.json
+++ b/CRM/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.2",
     "mongodb": "^3.2.3",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "npm": "^6.9.0"
   }
 }
