--- a/CRM/package.json
+++ b/CRM/package.json
@@ -6,13 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@coreui/coreui": "^2.1.9",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.16.4",
     "http-errors": "~1.6.2",
+    "jquery": "^3.4.0",
     "mongodb": "^3.2.3",
+    "mongoose": "^5.5.4",
+    "monk": "^6.0.6",
     "morgan": "~1.9.0",
-    "npm": "^6.9.0"
+    "npm": "^6.9.0",
+    "perfect-scrollbar": "^1.3.0",
+    "popper.js": "^1.14.7",
+    "tar": "^4.4.8"
   }
 }
