--- a/CRM/package.json
+++ b/CRM/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.9",
+    "chart.js": "^2.8.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
