--- a/CRM/.gitignore
+++ b/CRM/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/api/node_modules
-/web/node_modules
-/node_modules
+api/node_modules
+web/node_modules
+node_modules
 
 # testing
 /coverage
