--- a/CRM/package.json
+++ b/CRM/package.json
@@ -6,21 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@coreui/coreui": "^2.1.9",
+    "@coreui/coreui": "^2.1.12",
+    "bootstrap": "^4.3.1",
+    "chalk": "^2.4.2",
     "chart.js": "^2.8.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "express-session": "^1.10.1",
     "http-errors": "~1.6.2",
-    "jquery": "^3.4.0",
-    "mongodb": "^3.2.3",
-    "mongoose": "^5.5.4",
+    "jquery": "^3.4.1",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.7",
     "monk": "^6.0.6",
     "morgan": "~1.9.0",
-    "npm": "^6.10.1",
+    "npm": "^6.10.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
     "perfect-scrollbar": "^1.3.0",
     "popper.js": "^1.14.7",
-    "tar": "^4.4.8"
+    "tar": "^4.4.10"
   }
 }
