--- a/CRM/package.json
+++ b/CRM/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.10.1",
     "http-errors": "~1.6.2",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.7",
     "monk": "^6.0.6",
