--- a/CRM/package.json
+++ b/CRM/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
+    "async": "^3.1.0",
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
     "chart.js": "^2.8.0",
