--- a/CRM/package.json
+++ b/CRM/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
     "async": "^3.1.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
     "chart.js": "^2.8.0",
