--- a/CRM/package.json
+++ b/CRM/package.json
@@ -13,23 +13,27 @@
     "chalk": "^2.4.2",
     "chart.js": "^2.8.0",
     "cookie-parser": "~1.4.3",
+    "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.17.1",
     "express-session": "^1.10.1",
+    "fast-csv": "^4.1.3",
     "http-errors": "~1.6.2",
     "jquery": "^3.4.1",
+    "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.7.5",
-    "monk": "^6.0.6",
+    "monk": "^7.1.2",
     "morgan": "~1.9.0",
-    "npm": "^6.13.4",
-    "passport": "^0.4.0",
+    "multer": "^1.4.2",
+    "npm": "^6.14.2",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "perfect-scrollbar": "^1.3.0",
     "popper.js": "^1.14.7",
-    "tar": "^4.4.10"
+    "tar": "^6.0.1"
   }
 }
