--- a/CRM/package.json
+++ b/CRM/package.json
@@ -9,6 +9,7 @@
     "@coreui/coreui": "^2.1.16",
     "@coreui/icons": "^1.0.1",
     "@popperjs/core": "^2.2.3",
+    "accesscontrol": "^2.2.1",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
