--- a/CRM/package.json
+++ b/CRM/package.json
@@ -20,6 +20,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.5.9",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "fast-csv": "^4.3.1",
     "http-errors": "^1.6.3",
