--- a/CRM/package.json
+++ b/CRM/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "@coreui/coreui": "^2.1.16",
     "@coreui/icons": "^1.0.1",
-    "@popperjs/core": "^2.4.4",
+    "@googlemaps/js-api-loader": "^1.11.1",
+    "@popperjs/core": "^2.6.0",
     "accesscontrol": "^2.2.1",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "chalk": "^2.4.2",
     "chart.js": "^2.9.3",
     "cookie-parser": "^1.4.5",
@@ -25,19 +26,20 @@
     "fast-csv": "^4.3.2",
     "http-errors": "^1.8.0",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^2.1.0",
     "minimist": "^1.2.5",
     "moment": "^2.28.0",
-    "mongodb": "^3.6.2",
-    "mongoose": "^5.10.5",
-    "monk": "^7.3.2",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.15",
+    "monk": "^7.3.3",
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
-    "npm": "^6.14.8",
+    "npm": "^6.14.11",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1",
+    "passport-local-mongoose": "^6.1.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
-    "tar": "^6.0.5"
+    "tar": "^6.1.0"
   }
 }
