--- a/CRM/package.json
+++ b/CRM/package.json
@@ -8,14 +8,15 @@
   "dependencies": {
     "@coreui/coreui": "^2.1.16",
     "@coreui/icons": "^1.0.1",
-    "@googlemaps/js-api-loader": "^1.11.1",
-    "@popperjs/core": "^2.6.0",
+    "@googlemaps/js-api-loader": "^1.11.2",
+    "@popperjs/core": "^2.9.1",
     "accesscontrol": "^2.2.1",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "chalk": "^2.4.2",
     "chart.js": "^2.9.3",
+    "connect-mongo": "^4.3.1",
     "cookie-parser": "^1.4.5",
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
@@ -23,14 +24,15 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "fast-csv": "^4.3.2",
     "http-errors": "^1.8.0",
-    "jquery": "^3.5.1",
-    "mapbox-gl": "^2.1.0",
+    "jquery": "^3.6.0",
+    "mapbox-gl": "^2.1.1",
     "minimist": "^1.2.5",
     "moment": "^2.28.0",
     "mongodb": "^3.6.4",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.11.19",
     "monk": "^7.3.3",
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
